Fixed implementation of smooth scroll due to lack of gliding on mobile.

--- a/styles/modal.css
+++ b/styles/modal.css
@@ -70,8 +70,8 @@
 }
 
 .modal-content article p {
-  line-height: 2;
-  margin-bottom: 40px;
+  line-height: 1.75;
+  margin-bottom: 24px;
 }
 
 .modal-content article a {
