--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ html {
   height: 100%;
   margin: 0;
   padding: 0;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -27,7 +28,6 @@ body {
   line-height: 1.5;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   background: #333;
-  overlow: hidden;
 }
 
 pre {
@@ -140,7 +140,7 @@ header {
   width: 100%;
   background: rgba(0,0,0,0.7);
   border-bottom: 0.5px solid #61DAFB;
-  z-index: 3;
+  z-index: 2;
 }
 
 .primary-navigation {
@@ -181,9 +181,6 @@ header {
 main {
   position: relative;
   height: 100%;
-  scroll-behavior: smooth;
-  /* scroll-snap-type: y mandatory;     /* optional */
-  overflow: scroll;                     /* or overflow-y: scroll */
 }
 
 
@@ -205,7 +202,7 @@ section .content {
   height: 100%;
   width: 100%;
   padding: 100px 100px 50px 100px;
-  z-index: 2;
+  z-index: 1;
 }
 
 section .content h1 {
@@ -281,28 +278,3 @@ https://caniuse.com/#search=background-blend-mode */
   content: '';
   background: url('../images/contact-background.jpg') no-repeat center center/cover;
 }
-
-
-
-/* =============================================================================
-                                  .particles
-============================================================================= */
-
-
-.particles {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
-}
-
-
-
-
-
-
-
-
-
-/**/
